@@ -54,6 +54,7 @@
     <Compile Include="Core\FixtureBeforeContext.cs" />
     <Compile Include="Core\ICollectionFormatter.cs" />
     <Compile Include="Core\ILGeneratorExtensions.cs" />
+    <Compile Include="Core\PendingGuardTestContext.cs" />
     <Compile Include="Core\TimedTestContext.cs" />
     <Compile Include="Expectations\MethodExpectProviderLookup.cs" />
     <Compile Include="Core\RowSuiteBuilder.cs" />
