@@ -1,6 +1,7 @@
 .:[ 0.0.2.27 ]:.
 New Features
 [x] FeatureAttribute.GroupAs added.
+[x] Pending tests fail when passing.
 
 .:[ 0.0.2.26 ]:.
 
